# spectra-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: configuration.md  development.md  fingerprinting.md  hermes.md  openclaw.md  security.md  tools.md
src/invisible_playwright_mcp/: __init__.py  __main__.py  server.py
src/spectra_mcp/: __init__.py  __main__.py  linux_native.py  server.py
tests/: __init__.py  test_integration.py  test_linux_native.py  test_server.py
