[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra_mcp"
version = "0.1.0"
description = "MCP server that exposes the invisible_playwright anti-detect browser to LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LowOrbitLab" }]
keywords = ["mcp", "playwright", "anti-detect", "browser-automation", "scraping"]
dependencies = [
    "mcp>=1.2,<2",
    "invisible-playwright @ git+https://github.com/feder-cr/invisible_playwright.git@a1b75d93e928c37130833d667ae1acf15a23d027",
    "playwright>=1.40,<1.61",
]

[project.urls]
Repository = "https://github.com/LowOrbitLab/spectra_mcp"
Issues = "https://github.com/LowOrbitLab/spectra_mcp/issues"

[project.scripts]
spectra_mcp = "spectra_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
